--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "add": "^2.0.6",
+    "badge": "^1.0.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
+    "shadcn": "^3.5.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
   },
